parts of gptservice logic modified