@@ -29,13 +29,13 @@ public class CustomChatGPTService {
                 sentence.append(", ");
             }
         }
-        String multiChat = chatgptService.multiChat(Arrays.asList(new MultiChatMessage("user", sentence.toString()+"을 먹는다고 했을 때 섭취하는 사람에게 어떤 효능이 있을까? 위 아래 문단의 잡설은 하지 말고 리스트만 보여줘.")));
+        String multiChat = chatgptService.multiChat(List.of(new MultiChatMessage("user", sentence + "을 먹는다고 했을 때 섭취하는 사람에게 어떤 효능이 있을까? 위 아래 문단의 잡설은 하지 말고, 리스트로 짧은 내용만 보여줘.")));
         return new AiResDto(multiChat);
     }
 
     public AiResDto getAnswerSnackOrTea(long user_id, Meals meals) {
         SnackOrTeaResponseDto menu = menuProvider.provideSnackOrTea(user_id, meals);
-        String multiChat = chatgptService.multiChat(Arrays.asList(new MultiChatMessage("user", menu.getSnack_or_tea()+"을 먹는다고 했을 때 섭취하는 사람에게 어떤 효능이 있을까? 위 아래 문단의 잡설은 하지 말고 리스트만 보여줘.")));
+        String multiChat = chatgptService.multiChat(List.of(new MultiChatMessage("user", menu.getSnack_or_tea() + "을 먹는다고 했을 때 섭취하는 사람에게 어떤 효능이 있을까? 위 아래 문단의 잡설은 하지 말고 리스트로 짧은 내용만 보여줘.")));
         return new AiResDto(multiChat);
     }
 }
